{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 27,
  "lineage": "90e1594a-2df4-6622-fe75-9bf261ea1ab5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "test-eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0f4c31ddf4e14c477",
            "domain": "vpc",
            "id": "eipalloc-07935e575970f2382",
            "network_interface": "eni-0d42779a2e2e968f2",
            "private_dns": "ip-10-10-100-112.ec2.internal",
            "private_ip": "10.10.100.112",
            "public_dns": "ec2-34-202-142-52.compute-1.amazonaws.com",
            "public_ip": "34.202.142.52",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-instance-db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-098f16afa9edf40be",
            "arn": "arn:aws:ec2:us-east-1:502382556974:instance/i-09c78cce91e74c650",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09c78cce91e74c650",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-063d6faac01e2e424",
            "private_dns": "ip-10-10-200-226.ec2.internal",
            "private_ip": "10.10.200.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02eb6cc29fcb6f63b",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03f797efb03977f32",
            "tags": {
              "Name": "test-instance-db",
              "env": "test"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09b507ff18f8be485"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykey",
            "aws_security_group.test-sg-db",
            "aws_subnet.test-subnet-priv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-instance-web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-098f16afa9edf40be",
            "arn": "arn:aws:ec2:us-east-1:502382556974:instance/i-01e39d63e0f9f97ba",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01e39d63e0f9f97ba",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e4fb90a59b4d862e",
            "private_dns": "ip-10-10-100-4.ec2.internal",
            "private_ip": "10.10.100.4",
            "public_dns": "ec2-3-82-208-77.compute-1.amazonaws.com",
            "public_ip": "3.82.208.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ee66f7c0207283de",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c1bf4cec4dae85fd",
            "tags": {
              "Name": "test-instance-web",
              "env": "test"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-078dba788787a9765"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykey",
            "aws_security_group.test-sg-web",
            "aws_subnet.test-subnet-pub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502382556974:internet-gateway/igw-0cf5e187138226c80",
            "id": "igw-0cf5e187138226c80",
            "owner_id": "502382556974",
            "tags": {
              "Name": "test-igw",
              "env": "test"
            },
            "vpc_id": "vpc-0afa9da67c54d75f4"
          },
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "test-ngw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07935e575970f2382",
            "id": "nat-00d3c4f9338bedbd2",
            "network_interface_id": "eni-0d42779a2e2e968f2",
            "private_ip": "10.10.100.112",
            "public_ip": "34.202.142.52",
            "subnet_id": "subnet-0c1bf4cec4dae85fd",
            "tags": {
              "Name": "test-ngw"
            }
          },
          "dependencies": [
            "aws_eip.test-eip",
            "aws_subnet.test-subnet-pub",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test-rtb-priv",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0996a2e88ef9b1977",
            "owner_id": "502382556974",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-00d3c4f9338bedbd2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-trb-priv",
              "env": "test"
            },
            "vpc_id": "vpc-0afa9da67c54d75f4"
          },
          "dependencies": [
            "aws_nat_gateway.test-ngw",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test-rtb-pub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02d6e7035af7f2193",
            "owner_id": "502382556974",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cf5e187138226c80",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-rtb-pub",
              "env": "test"
            },
            "vpc_id": "vpc-0afa9da67c54d75f4"
          },
          "dependencies": [
            "aws_internet_gateway.test-igw",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test-rtba-priv",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0210e7e9a92c2c89b",
            "route_table_id": "rtb-0996a2e88ef9b1977",
            "subnet_id": "subnet-03f797efb03977f32"
          },
          "dependencies": [
            "aws_eip.test-eip",
            "aws_nat_gateway.test-ngw",
            "aws_route_table.test-rtb-priv",
            "aws_subnet.test-subnet-priv",
            "aws_subnet.test-subnet-pub",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test-rtba-pub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb7062d0a2021559",
            "route_table_id": "rtb-02d6e7035af7f2193",
            "subnet_id": "subnet-0c1bf4cec4dae85fd"
          },
          "dependencies": [
            "aws_internet_gateway.test-igw",
            "aws_route_table.test-rtb-pub",
            "aws_subnet.test-subnet-pub",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-sg-db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502382556974:security-group/sg-09b507ff18f8be485",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b507ff18f8be485",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-078dba788787a9765"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "test-sg-db",
            "name_prefix": "",
            "owner_id": "502382556974",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-sg-db",
              "env": "test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afa9da67c54d75f4"
          },
          "dependencies": [
            "aws_security_group.test-sg-web",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-sg-web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502382556974:security-group/sg-078dba788787a9765",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-078dba788787a9765",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "test-sg-web",
            "name_prefix": "",
            "owner_id": "502382556974",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-sg-web",
              "env": "test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afa9da67c54d75f4"
          },
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test-subnet-priv",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502382556974:subnet/subnet-03f797efb03977f32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.200.0/24",
            "id": "subnet-03f797efb03977f32",
            "map_public_ip_on_launch": false,
            "owner_id": "502382556974",
            "tags": {
              "Name": "test-subnet-priv",
              "env": "test"
            },
            "vpc_id": "vpc-0afa9da67c54d75f4"
          },
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test-subnet-pub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502382556974:subnet/subnet-0c1bf4cec4dae85fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.100.0/24",
            "id": "subnet-0c1bf4cec4dae85fd",
            "map_public_ip_on_launch": false,
            "owner_id": "502382556974",
            "tags": {
              "Name": "test-subnet-pub",
              "env": "test"
            },
            "vpc_id": "vpc-0afa9da67c54d75f4"
          },
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502382556974:vpc/vpc-0afa9da67c54d75f4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-029b931873fb34da7",
            "default_route_table_id": "rtb-06ea0f57117953cc7",
            "default_security_group_id": "sg-0579cba6cc07d67bd",
            "dhcp_options_id": "dopt-abda84d0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0afa9da67c54d75f4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06ea0f57117953cc7",
            "owner_id": "502382556974",
            "tags": {
              "Name": "test-vpc",
              "env": "test"
            }
          }
        }
      ]
    }
  ]
}